[workspace]
name = "recap"
version = "0.1.0"
edition = "2021"
authors = ["lucaoskaique <me@lucaskaique.com.br>"]
description = "A modern headless CMS built with Rust and WebAssembly"
repository = "https://github.com/lucaoskaique/recap"
license = "MIT"

members = ["crates/core", "crates/admin-ui", "crates/media"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

# WebAssembly
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "console",
    "Storage",
    "History",
    "Location",
] }

# Async
futures = "0.3.31"
tokio = { version = "1.0", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# UI State Management 
yew = { version = "0.20", features = ["csr"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
